a deprecated newInstance